tests/baselines/reference/contextualTypeWithTuple.errors.txt
tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts(3,5): error TS2322: Type '[数字, 文字, 真假]' is not assignable to type '[数字, 文字]'.
  Types of property 'pop' are incompatible.
    Type '() => 文字 | 数字 | 真假' is not assignable to type '() => 文字 | 数字'.
      Type '文字 | 数字 | 真假' is not assignable to type '文字 | 数字'.
        Type '为真' is not assignable to type '文字 | 数字'.
tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts(15,1): error TS2322: Type '[数字, 文字, 真假]' is not assignable to type '[数字, 文字]'.
tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts(18,1): error TS2322: Type '[{}, 数字]' is not assignable to type '[{ a: 文字; }, 数字]'.
  Type '{}' is not assignable to type '{ a: 文字; }'.
    Property 'a' is missing in type '{}'.
tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts(19,1): error TS2322: Type '[数字, 文字]' is not assignable to type '[数字, 文字, 真假]'.
  Property '2' is missing in type '[数字, 文字]'.
tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts(20,5): error TS2322: Type '[文字, 文字, 数字]' is not assignable to type '[文字, 文字]'.
  Types of property 'pop' are incompatible.
    Type '() => 文字 | 数字' is not assignable to type '() => 文字'.
      Type '文字 | 数字' is not assignable to type '文字'.
        Type '数字' is not assignable to type '文字'.
tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts(24,1): error TS2322: Type '[C, 文字 | 数字]' is not assignable to type '[C, 文字 | 数字, D]'.
  Property '2' is missing in type '[C, 文字 | 数字]'.
tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts(25,1): error TS2322: Type '[数字, 文字 | 数字]' is not assignable to type '[数字, 文字]'.
  Type '文字 | 数字' is not assignable to type '文字'.
    Type '数字' is not assignable to type '文字'.


==== tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts (7 errors) ====
    // no error
    var numStrTuple: [number, string] = [5, "hello"];
    var numStrTuple2: [number, string] = [5, "foo", true];
        ~~~~~~~~~~~~
!!! error TS2322: Type '[数字, 文字, 真假]' is not assignable to type '[数字, 文字]'.
!!! error TS2322:   Types of property 'pop' are incompatible.
!!! error TS2322:     Type '() => 文字 | 数字 | 真假' is not assignable to type '() => 文字 | 数字'.
!!! error TS2322:       Type '文字 | 数字 | 真假' is not assignable to type '文字 | 数字'.
!!! error TS2322:         Type '为真' is not assignable to type '文字 | 数字'.
    var numStrBoolTuple: [number, string, boolean] = [5, "foo", true];
    var objNumTuple: [{ a: string }, number] = [{ a: "world" }, 5];
    var strTupleTuple: [string, [number, {}]] = ["bar", [5, { x: 1, y: 1 }]];
    class C { }
    class D { }
    var unionTuple: [C, string | number] = [new C(), "foo"];
    var unionTuple1: [C, string | number] = [new C(), "foo"];
    var unionTuple2: [C, string | number, D] = [new C(), "foo", new D()];
    var unionTuple3: [number, string| number] = [10, "foo"]; 
    
    numStrTuple = numStrTuple2;
    numStrTuple = numStrBoolTuple;
    ~~~~~~~~~~~
!!! error TS2322: Type '[数字, 文字, 真假]' is not assignable to type '[数字, 文字]'.
    
    // error
    objNumTuple = [ {}, 5];
    ~~~~~~~~~~~
!!! error TS2322: Type '[{}, 数字]' is not assignable to type '[{ a: 文字; }, 数字]'.
!!! error TS2322:   Type '{}' is not assignable to type '{ a: 文字; }'.
!!! error TS2322:     Property 'a' is missing in type '{}'.
    numStrBoolTuple = numStrTuple;
    ~~~~~~~~~~~~~~~
!!! error TS2322: Type '[数字, 文字]' is not assignable to type '[数字, 文字, 真假]'.
!!! error TS2322:   Property '2' is missing in type '[数字, 文字]'.
    var strStrTuple: [string, string] = ["foo", "bar", 5];
        ~~~~~~~~~~~
!!! error TS2322: Type '[文字, 文字, 数字]' is not assignable to type '[文字, 文字]'.
!!! error TS2322:   Types of property 'pop' are incompatible.
!!! error TS2322:     Type '() => 文字 | 数字' is not assignable to type '() => 文字'.
!!! error TS2322:       Type '文字 | 数字' is not assignable to type '文字'.
!!! error TS2322:         Type '数字' is not assignable to type '文字'.
    
    unionTuple = unionTuple1;
    unionTuple = unionTuple2;
    unionTuple2 = unionTuple;
    ~~~~~~~~~~~
!!! error TS2322: Type '[C, 文字 | 数字]' is not assignable to type '[C, 文字 | 数字, D]'.
!!! error TS2322:   Property '2' is missing in type '[C, 文字 | 数字]'.
    numStrTuple = unionTuple3;
    ~~~~~~~~~~~
!!! error TS2322: Type '[数字, 文字 | 数字]' is not assignable to type '[数字, 文字]'.
!!! error TS2322:   Type '文字 | 数字' is not assignable to type '文字'.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.